<resources>
    <string name="app_name" translatable="false">Location Share</string>

    <!-- the app title if the app is run as geo picker that is shown in the android choice chooser -->
    <string name="app_name_pick" translatable="false">GPS (Location Share)</string>

    <string name="share_location">Share</string>
    <string name="copy_location">Copy</string>
    <string name="view_location">View</string>
    <string name="copied">Copied to clipboard</string>
    <string name="clipboard_error">Failed to copy text to clipboard</string>
    <string name="getting_location">Getting location…</string>
    <string name="share_location_via">Share location via</string>
    <string name="view_location_via">View location via</string>

    <string name="turn_on_GPS">Turn on GPS</string>
    <string name="permission_denied">GPS permission denied</string>

    <string name="accuracy">Accuracy</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <string name="choose_link">Choose a link type</string>

    <string name="always_ask">Ask me every time</string>
    <string name="googlemaps" translatable="false">Google Maps</string>
    <string name="openstreetmap" translatable="false">OpenStreetMap</string>
    <string name="geouri" translatable="false">GeoURI</string>

    <string name="settings">Settings</string>
    <string name="link_type">Link type</string>
</resources>
