<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat" />

    <LinearLayout
        android:id="@+id/statusLayout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:paddingBottom="24dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="24dp">

        <TextView
            android:id="@+id/detailsText"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/progressTitle"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getting_location"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/progressBar"
            android:visibility="visible"
            android:indeterminate="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/gpsButton"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:onClick="openLocationSettings"
            android:text="@string/turn_on_GPS" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/shareLayout"
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:layout_below="@+id/statusLayout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/shareButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="shareLocation"
            android:text="@string/share_location" />

        <Button
            android:id="@+id/copyButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="copyLocation"
            android:text="@string/copy_location" />

        <Button
            android:id="@+id/viewButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="viewLocation"
            android:text="@string/view_location" />

    </LinearLayout>

</RelativeLayout>